--- a/css/index.css
+++ b/css/index.css
@@ -12,6 +12,7 @@ html {
         align-items: center;
         display: flex;
         padding-left: 70px;
+        position: relative;
 }
 .hero-content {
     display: flex;
@@ -28,6 +29,16 @@ html {
     font-size: 75px;
     color: black;
     text-decoration: underline;
+}
+.particles-js {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+
 }
 body {
     background-color: #c4c4c4;
