--- a/css/index.css
+++ b/css/index.css
@@ -30,7 +30,7 @@ html {
     color: black;
     text-decoration: underline;
 }
-.particles-js {
+#particles-js {
     position: absolute;
     width: 100%;
     height: 100%;
