--- a/css/index.css
+++ b/css/index.css
@@ -39,7 +39,7 @@ html {
     color: black;
     text-decoration: underline;
 }
-#particles-js {
+#particles-js, #particles-forms-js {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -265,6 +265,9 @@ section {}
     height: auto;
     line-height: 0;
     display: block;
+}
+#contactme{
+    position: relative;
 }
 .form-element {
     display: flex;
