--- a/css/index.css
+++ b/css/index.css
@@ -107,6 +107,11 @@ body {
 
 }
 
+.header-inner .logo {
+        display: block;
+        margin: 0 20px 20px;
+
+}
 .section-heading {
     display: flex;
     justify-content: center;
@@ -374,4 +379,7 @@ footer {
     display: block;
     margin: 0 auto;
     margin-bottom: 10px;
+}
+.mobile-menu {
+    display: none;
 }
