--- a/css/index.css
+++ b/css/index.css
@@ -144,6 +144,10 @@ body {
     margin-bottom: 20px;
 }
 
+.projects-img-container {
+    position: relative;
+}
+
 .projects {
     display: grid;
     grid-gap: 20px;
@@ -159,7 +163,10 @@ body {
     display: flex;
     flex-wrap: wrap;
     width: 200px;
-    justify-content: center;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: center;
+
 }
 
 .project-coverart {
@@ -177,11 +184,11 @@ body {
 }
 
 .project-title {
-    padding-top: 15px;
     letter-spacing: .3rem;
     text-transform: uppercase;
     font-weight: 500;
     text-align: center;
+    padding: 15px 20px 0;
 }
 
 .project-info-link {
@@ -383,3 +390,11 @@ footer {
 .mobile-menu {
     display: none;
 }
+.swiper {
+    width: 100%;
+    height: 300px;
+  }
+
+  .swiper-button-prev, .swiper-button-next {
+      display: none;
+  }
