--- a/css/mobile.css
+++ b/css/mobile.css
@@ -74,12 +74,17 @@ width: 40px;
     justify-content: center;
 }
 
-.swiper-horizontal>.swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal {
+.swiper-discography.swiper-horizontal>.swiper-pagination-bullets {
     bottom: -5px;
+}
+.swiper-portfolio.swiper-horizontal>.swiper-pagination-bullets {
+    bottom: 0px;
 }
 .swiper-pagination-bullet-active {
     background-color: wheat;
+
 }
+
 .aboutmedev {
     padding-left: 20px;
     padding-right: 20px;
