--- a/css/mobile.css
+++ b/css/mobile.css
@@ -8,13 +8,17 @@
 }
 
 .homeicon img {
-height: 40px;
-width: 40px;
+    height: 40px;
+    width: 40px;
 }
 
 .bbs {
     font-size: 40px;
     font-weight: 700;
+}
+
+.typewrite {
+    font-size: 50px;
 }
 
 .nav {
@@ -72,6 +76,7 @@ width: 40px;
 .projects {
     grid-template-columns: repeat(1, 1fr);
 }
+
 .project {
     justify-content: center;
 }
@@ -79,9 +84,11 @@ width: 40px;
 .swiper-discography.swiper-horizontal>.swiper-pagination-bullets {
     bottom: -5px;
 }
+
 .swiper-portfolio.swiper-horizontal>.swiper-pagination-bullets {
     bottom: 0px;
 }
+
 .swiper-pagination-bullet-active {
     background-color: wheat;
 
@@ -111,20 +118,25 @@ width: 40px;
     right: 20px;
 
 }
-.mobile-menu .menu-close-icon{
-    display: none;
-}
-.mobile-menu .menu-icon{
-    display: block;
-}
-.mobile-menu.is-active .menu-close-icon{
-    display: block;
-    margin-top: -5px;
-}
-.mobile-menu.is-active .menu-icon{
+
+.mobile-menu .menu-close-icon {
     display: none;
 }
 
-.swiper-button-prev, .swiper-button-next {
+.mobile-menu .menu-icon {
+    display: block;
+}
+
+.mobile-menu.is-active .menu-close-icon {
+    display: block;
+    margin-top: -5px;
+}
+
+.mobile-menu.is-active .menu-icon {
+    display: none;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
     display: block;
 }
