--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,3 +1,7 @@
+.html {
+    padding: 135px;
+}
+
 .hero {
     padding: 100px 20px;
     height: auto
@@ -101,6 +105,13 @@
 .aboutmedev {
     padding-left: 20px;
     padding-right: 20px;
+}
+
+.face {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    float: none;
 }
 
 .section-subset-content {
