--- a/css/index.css
+++ b/css/index.css
@@ -83,9 +83,24 @@ body.is-dark {
     font-weight: 700;
 }
 
+.is-dark .typewrite {
+    border-right: 2px solid rgba(255, 255, 255, .75);
+    animation: blinkTextCursorLight 500ms infinite normal;
+}
+
 @keyframes blinkTextCursor {
     from {
         border-right-color: rgba(0, 0, 0, .75);
+    }
+
+    to {
+        border-right-color: transparent;
+    }
+}
+
+@keyframes blinkTextCursorLight {
+    from {
+        border-right-color: rgba(250, 250, 250, .75);
     }
 
     to {
