--- a/css/index.css
+++ b/css/index.css
@@ -337,6 +337,15 @@ body.is-dark {
     margin: 0 auto;
 }
 
+.section-subset {
+    opacity: 0;
+}
+
+.section-subset.animate {
+    opacity: 1;
+}
+
+
 .section-subset-content {
     display: grid;
     grid-gap: 5px;
@@ -345,7 +354,74 @@ body.is-dark {
 }
 
 .section-subset-item {
-    padding: 20px
+    padding: 20px;
+}
+
+.animate .section-subset-item {
+    animation-name: animateIn;
+    animation-duration: 350ms;
+    animation-delay: calc(var(--animation-order) * 100ms);
+    animation-fill-mode: both;
+    animation-timing-function: ease-in-out;
+}
+
+.animate.section-subset-item:nth-child(1) {
+    animation-delay: calc(1 * 100ms);
+}
+
+.animate .section-subset-item:nth-child(2) {
+    animation-delay: calc(2 * 100ms);
+}
+
+.animate .section-subset-item:nth-child(3) {
+    animation-delay: calc(3 * 100ms);
+}
+
+.animate .section-subset-item:nth-child(4) {
+    animation-delay: calc(4 * 100ms);
+}
+
+.animate .section-subset-item:nth-child(5) {
+    animation-delay: calc(5 * 100ms);
+}
+
+.animate .section-subset-item:nth-child(6) {
+    animation-delay: calc(6 * 100ms);
+}
+
+.animate .section-subset-item:nth-child(7) {
+    animation-delay: calc(7 * 100ms);
+}
+
+.animate .section-subset-item:nth-child(8) {
+    animation-delay: calc(8 * 100ms);
+}
+
+.animate .section-subset-item:nth-child(9) {
+    animation-delay: calc(9 * 100ms);
+}
+
+.animate .section-subset-item:nth-child(10) {
+    animation-delay: calc(10 * 100ms);
+}
+
+.animate .section-subset-item:nth-child(11) {
+    animation-delay: calc(11 * 100ms);
+}
+
+.animate .section-subset-item:nth-child(12) {
+    animation-delay: calc(12 * 100ms);
+}
+
+@keyframes animateIn {
+    0% {
+        opacity: 0;
+        transform: scale(0.6) translateY(-8px);
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
 
 .section-subset-item img {
