--- a/css/index.css
+++ b/css/index.css
@@ -293,6 +293,28 @@ body.is-dark {
     border: 0;
 }
 
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+}
+
+.video-container iframe,
+.video-container object,
+.video-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.project-info-link:hover {
+    cursor: pointer;
+}
+
 .project:hover .project-info {
     background-color: rgba(0, 0, 0, 0.3);
     visibility: visible;
