--- a/css/index.css
+++ b/css/index.css
@@ -688,14 +688,18 @@ footer {
 
 /* Modal Content/Box */
 .modal-content {
-    background-color: #fefefe;
+    background-color: var(--icon-color-tertiary);
     margin: 15% auto;
     /* 15% from the top and centered */
     padding: 20px;
-    border: 1px solid #888;
     max-width: 400px;
-    /* Could be more or less, depending on screen size */
 }
+
+.is-dark .modal-content {
+    background-color: var(--background-color);
+
+}
+
 
 /* The Close Button */
 .close {
