--- a/css/index.css
+++ b/css/index.css
@@ -666,13 +666,20 @@ footer {
     display: block;
     line-height: 0;
     width: 100%;
+    overflow: hidden;
+}
 
+.swiper-portfolio .swiper-slide a:hover img {
+    display: block;
+    line-height: 0;
+    width: 100%;
+    transform: scale(1.2);
 }
 
 .swiper-portfolio img {
     width: 100%;
     height: auto;
-
+    transition: transform 1500ms cubic-bezier(0.215, 0.61, 0.355, 1);
 }
 
 .swiper-portfolio .swiper-slide {
